crates/cli/src/commands/init/snapshots/moon_cli__commands__init__typescript__tests__renders_minimal.snap
---
source: crates/cli/src/commands/init/typescript.rs
assertion_line: 84
expression: render_template(context).unwrap()
---
typescript:
  syncProjectReferences: false

